--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    @variants responsive {
+        .masonry {
+           
+            column-count: 1;
+        }
+        .masonry-sm {
+           
+            column-count: 2;
+        }
+        .masonry-md {
+           
+            column-count: 3;
+        }
+        .break-inside {
+            break-inside: avoid;
+        }
+
+    }
+}
